# 2048_with_SDL_Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Game.cpp  Readme.md
cmake/: UpdateSubmodules.cmake
